--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.5.0"
+num_enum = "0.7.3"
+uuid = { version = "1.12.1", features = ["v4"] }
