--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["network-programming", "encoding"]
 edition = "2021"
 
 [dependencies]
-macros = { path = "./macros" }
+gami_macros = { version = "0.1.0", path = "./macros" }
 byteorder = "1.5.0"
 uuid = { version = "1.12.1", features = ["v4"] }
 serde = { version = "1.0.217", features = ["derive"] }
