--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ byteorder = "1.5.0"
 uuid = { version = "1.12.1", features = ["v4"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+atomic_enum = "0.3.0"
 
 [build-dependencies]
 quote = "1.0.38"
