--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 atomic_enum = "0.3.0"
 enum_dispatch = "0.3.13"
+bytes = "1.10.1"
+tokio = { version = "1.44.2", features = ["io-util"] }
+thiserror = "2.0.12"
+derive_more = { version = "2.0.1", features = ["display"] }
 
 [build-dependencies]
 quote = "1.0.38"
